@@ -32,8 +32,8 @@ by the archive file extension.
 ARC (.arc), ARJ (.arj),
 BZIP2 (.bz2), CAB (.cab), compress (.Z), CPIO (.cpio), DEB (.deb), GZIP (.gz),
 LRZIP (.lrz), LZH (.lha, .lzh), LZIP (.lz), LZMA (.lzma), LZOP (.lzo),
-RPM (.rpm), RAR (.rar), RZIP (.rz), TAR (.tar), XZ (.xz) and ZIP (.zip, .jar)
-formats.
+RPM (.rpm), RAR (.rar), RZIP (.rz), TAR (.tar), XZ (.xz), ZIP (.zip, .jar) and
+ZOO (.zoo) formats.
 It relies on helper applications to handle those archive formats
 (for example bzip2 for BZIP2 archives).
 .SH EXAMPLES
