@@ -50,8 +50,9 @@ patool supports 7z (.7z), ACE (.ace), ALZIP (.alz), AR (.a), ARC (.arc),
 ARJ (.arj), BZIP2 (.bz2), CAB (.cab), compress (.Z), CPIO (.cpio),
 DEB (.deb), GZIP (.gz), LRZIP (.lrz), LZH (.lha, .lzh), LZIP (.lz),
 LZMA (.lzma), LZOP (.lzo), RPM (.rpm), RAR (.rar), RZIP (.rz), TAR (.tar),
-XZ (.xz) and ZIP (.zip, .jar) formats. It relies on helper applications
-to handle those archive formats (for example bzip2 for BZIP2 archives).""",
+XZ (.xz), ZIP (.zip, .jar) and ZOO (.zoo) formats. It relies on helper
+applications to handle those archive formats (for example bzip2 for
+BZIP2 archives).""",
     author = MyName,
     author_email = MyEmail,
     maintainer = MyName,
