@@ -120,6 +120,8 @@ class TestMime (unittest.TestCase):
         #self.mime_test_file("t.txt.lrz.foo", "application/x-lrzip", None)
         self.mime_test_file("t.txt.rz", "application/x-rzip", None)
         self.mime_test_file("t.txt.rz.foo", "application/x-rzip", None)
+        self.mime_test_file("t.zoo", "application/x-zoo", None)
+        self.mime_test_file("t.zoo.foo", "application/x-zoo", None)
 
     def test_mime_mimedb (self):
         self.mime_test_mimedb("t.7z", "application/x-7z-compressed", None)
@@ -157,3 +159,4 @@ class TestMime (unittest.TestCase):
         self.mime_test_mimedb("t.arc", "application/x-arc", None)
         self.mime_test_mimedb("t.lrz", "application/x-lrzip", None)
         self.mime_test_mimedb("t.rz", "application/x-rzip", None)
+        self.mime_test_mimedb("t.zoo", "application/x-zoo", None)
